# windows-Parental-Controls

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.en.md  README.md  build.sh  config.json  config.py  lock.screen  main.py  parent_control.py  pyproject.toml
core/: __init__.py  controller.py  lock_manager.py  state_machine.py
doc/: logging.md  state_diagram.txt  state_machine.md
docs/plans/: 2026-02-28-auto-restart-design.md  2026-02-28-auto-restart-implementation.md  2026-03-01-win-key-intercept-design.md  2026-03-01-win-key-intercept-implementation.md  2026-03-02-night-restrict-design.md  2026-03-02-night-restrict-implementation.md  2026-03-02-night-restrict-test.md  2026-03-06-tray-version-design.md  2026-03-06-tray-version-implementation.md
docs/superpowers/plans/: 2026-03-14-auto-update-implementation.md  2026-03-15-gitee-publish-implementation.md  2026-03-17-exe-filename-plan.md
docs/superpowers/specs/: 2026-03-14-auto-update-design.md  2026-03-15-gitee-publish-design.md  2026-03-17-exe-filename-design.md
platform/: __init__.py  single_instance.py  startup.py
ui/: __init__.py  lock_screen.py  password_dialog.py  tray.py
utils/: __init__.py  key_interceptor.py  logger.py  night_restrict.py  updater.py
