[project]
name = "parental-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.1.1",
    "pyinstaller>=6.18.0",
    "pystray>=0.19.5",
    "ruff>=0.15.0",
]

[tool.uv]
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true
