[project]
name = "parental-control"
version = "1.7.3"
description = "家长控制程序windows电脑版, 电脑每隔30分钟休息30分钟, 或输入密码解锁."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.1.1",
    "plyer>=2.1.0",
    "pyinstaller>=6.18.0",
    "pystray>=0.19.5",
    "ruff>=0.15.0",
]

[tool.uv]
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true
